# Plagiarism-Detector

./: .gitignore  Cargo.toml  README.md  cargo  makefile  sample-syntax  sample_test.txt  sample_train.txt
lexer/: lexer.c  lexer.l
src/: build.rs  ffi.rs  main.rs  reference.rs  trie.rs
