[package]
name = "plagiarism-detector"
version = "0.1.0"
authors = ["Yashodhan Joshi"]
edition = "2018"
links = "test"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
